Update 'pv2je5c33-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:68adf2acd3cdd8a22839484e1ac5ff910324838c@sha256:037f1f05cd37e9e13fab74426e700656ada48720bb29af226a0ea4e5be2dbba6

--- a/components/pv2je5c33-python/overlays/development/deployment-patch.yaml
+++ b/components/pv2je5c33-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: pv2je5c33-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:68adf2acd3cdd8a22839484e1ac5ff910324838c@sha256:037f1f05cd37e9e13fab74426e700656ada48720bb29af226a0ea4e5be2dbba6
+          name: container-image
